Refs #34316 -- Fixed displaying error lists in admin password change forms on small screens.
Follow up to e67804668115fd388e7554c6a809bd409f70adfe.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -652,7 +652,8 @@ input[type="submit"], button {
         padding: 0;
     }
 
-    form .aligned ul {
+    form .aligned ul,
+    form .aligned ul.errorlist {
         margin-left: 0;
         padding-left: 0;
     }
